remove recordings stuff
