# gate-db-entities/src/lib.rs
@@ -7,7 +7,6 @@ pub mod OtpCredential;
 pub mod Parameters;
 pub mod PasswordCredential;
 pub mod PublicKeyCredential;
-pub mod Recording;
 pub mod Role;
 pub mod Session;
 pub mod Target;
